[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = "graft"
description = "Kubernetes Job Runner"
authors = [{name = "Teague Lasser", email = "teague@subseq.io"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
]
version = "0.1.0"
dependencies = [
    "kubernetes==28.1.0",
    "prism-client==0.2.1",
    "requests>=2.25,<3.0",
    "typing-extensions==4.9.0"
]

[project.optional-dependencies]
testing = [
    "setuptools",
    "pytest",
    "pytest-cov",
]
[project.scripts]
graft = "graft.cli:cli"

[project.urls]
Homepage = 'https://github.com/kraemahz/graft'
Source = 'https://github.com/kraemahz/graft'

[tool.setuptools.packages.find]
where = ["src"]
include = ["graft"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]

[tool.pytest.ini_options]
norecursedirs = [
    "dist",
    "build",
    ".tox",
]
testpaths = ["tests"]
